[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "convert-hf-to-gguf"
version = "0.1.0"
description = "Convert Hugging Face models to GGUF format"
authors = ["GGML <ggml@ggml.ai>"]
license = "MIT"
readme = "README.md"
keywords = ["ggml", "gguf", "llama.cpp", "huggingface", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
    {include = "convert_hf_to_gguf.py"},
    {include = "conversion"},
]

[tool.poetry.urls]
homepage = "https://ggml.ai"
repository = "https://github.com/ggml-org/llama.cpp"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = ">=1.26.4"
sentencepiece = ">=0.1.98"
transformers = ">=4.57.0"
protobuf = ">=4.21.0"
torch = ">=2.6.0"
gguf = ">=0.19.0"

[tool.poetry.scripts]
convert-hf-to-gguf = "convert_hf_to_gguf:main"
